<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CVR</string>
    <string name="action_settings">Settings</string>
    <string name="action_accept">Accept</string>
    <string name="action_share">Share</string>
    <string name="action_new">Append</string>
    <string name="action_merge">Merge</string>
    <string name="action_edit">Edit</string>
    <string name="action_discard">Delete</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_ringtone">Set as Ringtone</string>
    <string name="action_selectall">Select All</string>
    

</resources>
